# actix-ws-broadcaster

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
example/actix-wsb-example/: main.rs
src/: lib.rs
templates/: chat.html  home.html  main.rs
