[package]
name = "actix-ws-broadcaster"
version = "0.2.0"
edition = "2021"
authors = ["Necdet Arda Etiman <arda_etiman_799@windowslive.com>"]
repository = "https://github.com/Necoo33/actix-ws-broadcaster"
license = "MIT"
readme = "README.md"
keywords = ["websocket", "broadcasting", "actix", "web", "streaming"]
categories = ["web-programming::websocket", "network-programming"]
description = "A broadcaster liblary for actix-ws that includes grouping and conditional broadcasting."
rust-version = "1.75"

[dependencies]
actix-ws = "0.3.0"

[lib]
name = "actix_wsb"

[[example]]
name = "example"
path = "example/actix-wsb-example/main.rs"

[dev-dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
askama = "0.12.1"
serde = { version = "1.0.174", features = ["derive"] }